fixed mentor`s comments
